--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
   backend:
     build: ./backend
     container_name: geco-backend
+    restart: unless-stopped
     ports:
       - "8000:8000"
     # optional but nice:
